--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.2",
     "javalon": "^1.0.36",
     "log4js": "^6.9.1",
-    "mongoose": "^7.3.1"
+    "mongoose": "^7.3.1",
+    "nodemailer": "^6.9.3"
   }
 }
