--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "javalon": "^1.0.36",
     "log4js": "^6.9.1",
     "mongoose": "^7.3.1",
-    "nodemailer": "^6.9.3"
+    "nodemailer": "^6.9.3",
+    "secp256k1": "^5.0.0"
   }
 }
