--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "log4js": "^6.9.1",
     "mongoose": "^7.3.1",
     "nodemailer": "^6.9.3",
+    "sanitize-filename": "^1.6.3",
     "secp256k1": "^5.0.0"
   }
 }
