--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "crypto": "^1.0.1",
     "ethers": "^6.6.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.8.0",
     "javalon": "^1.0.36",
     "log4js": "^6.9.1",
     "mongoose": "^7.4.1",
