--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     "ethers": "^6.7.1",
     "express": "^4.18.2",
     "express-rate-limit": "^6.8.0",
-    "javalon": "^1.0.36",
+    "follow-redirects": "^1.15.6",
+    "javalon2": "^1.0.6",
     "log4js": "^6.9.1",
     "mongoose": "^8.0.3",
-    "nodemailer": "^6.9.3",
+    "nodemailer": "^6.9.13",
     "sanitize-filename": "^1.6.3",
     "secp256k1": "^5.0.0"
   }
